--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,24 +1,24 @@
 body {
 	font-family: arial;
-	font-size: 13px;
-	color: #1C2130;
-	background-image: linear-gradient(top, rgb(202,225,244) 15%, rgb(238,238,238) 58%);
-	background-image: -o-linear-gradient(top, rgb(202,225,244) 15%, rgb(238,238,238) 58%);
-	background-image: -moz-linear-gradient(top, rgb(202,225,244) 15%, rgb(238,238,238) 58%);
-	background-image: -webkit-linear-gradient(top, rgb(202,225,244) 15%, rgb(238,238,238) 58%);
-	background-image: -ms-linear-gradient(top, rgb(202,225,244) 15%, rgb(238,238,238) 58%);
+	font-size: 14px;
+	color: #1D2130;
+	background-image: linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
+	background-image: -o-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
+	background-image: -moz-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
+	background-image: -webkit-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
+	background-image: -ms-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
 
 	background-image: -webkit-gradient(
 	linear,
 	left top,
 	left bottom,
-	color-stop(0.15, rgb(202,225,244)),
-	color-stop(0.58, rgb(238,238,238))
+	color-stop(0.15, rgb(200,225,245)),
+	color-stop(0.58, rgb(240,240,240))
 	);
 }
 
 #main-body {
-	height: 750px;
+	height: 1000px;
 	width: 60%;
 	border-top: 0px;
 	text-align: center;
