--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -110,7 +110,7 @@ opacity: 1;
 
 #outputSpace {
 	width: 75%;
-	margin-left: 200px;
+	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
 	font-size: 24px;
