--- a/bmi-calculator/stylesheets/main.css
+++ b/bmi-calculator/stylesheets/main.css
@@ -17,16 +17,6 @@ body {
 	);
 }
 
-#main-body {
-	height: 1000px;
-	width: 60%;
-	border-top: 0px;
-	text-align: center;
-	margin-right: auto;
-	margin-left: auto;
-	position: relative;
-}
-
 header {
 	width: 950px;
 	height: 60px;
@@ -54,7 +44,7 @@ header h2 {
 h1 {
 	font-size: 48px;
 	text-align: center;
-	top: 0px;
+	top: 0;
 	position: relative;
 	line-height: 1;
 	margin-top: 50px;
@@ -69,95 +59,3 @@ h2 {
 	min-width: 650px;
 }
 
-#meter {
-margin-top: 0px;
-float: left;
-width: 72%;
-margin-left: auto;
-margin-right: auto;
-padding-left: 30px;
-}
-
-#gauge {
-position: absolute;
-width: 259px;
-opacity: 1;
-}
-
-.arrow {
-	position: absolute;
-}
-
-#right-arrow {
-	width: 192px;
-	margin-top: 125px;
-	margin-left: 20px;
-}
-
-#hot-arrow {
-	width: 41px;
-	margin-top: 32px;
-	margin-left: 114px;
-	display: none;
-}
-
-#cold-arrow {
-	width: 77px;
-	margin-top: 129px;
-	margin-left: 117px;
-	display: none;
-}
-
-#outputSpace {
-	width: 75%;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	font-size: 24px;
-	position: relative;
-	margin-top: 320px;
-	color: #1C2130;
-	opacity: .5;
-	min-width: 942px;
-	height: 75px;
-}
-
-.output-message {
-	display: none;
-	width: 720px;
-	text-align: center;
-	float: center;
-	position: relative;
-	margin-left: 0px;
-}
-
-#buttonArea {
-	margin-top: -35px;
-	width: 80%;
-	margin-right: auto;
-	margin-left: auto;
-	min-width: 700px;
-}
-
-#numberField {
-	margin: 25px;
-	width: 60%;
-	height: 40px;
-	border-radius: 5px solid gray;
-	display: inline-block;
-	left: 0;
-	color: black;
-}
-
-#Button1 {
-	height: 50px;
-	width: 15%;
-	margin-left: 10px;
-	border-radius: 20px;
-	border: none;
-	background-color: #c1300d;
-	display: inline-block;
-	color: white;
-	font-size: 18px;
-	margin-top: 10px;
-}
