--- a/stylesheets/demo.css
+++ b/stylesheets/demo.css
@@ -67,10 +67,6 @@ p {
 }
 
 /* Header */
-.codrops-header {
-	padding: 7em 0 3em;
-	letter-spacing: -1px;
-}
 
 .codrops-header h1 {
 	max-width: 1200px;
@@ -89,13 +85,6 @@ p {
 }
 
 /* To Navigation Style */
-.codrops-top {
-	width: 100%;
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 0.69em;
-	line-height: 2.2;
-}
 
 .codrops-top a {
 	display: inline-block;
@@ -113,36 +102,12 @@ p {
 	float: left;
 }
 
-.codrops-icon:before {
-	margin: 0 4px;
-	text-transform: none;
-	font-weight: normal;
-	font-style: normal;
-	font-variant: normal;
-	font-family: 'codropsicons';
-	line-height: 1;
-	speak: none;
-	-webkit-font-smoothing: antialiased;
-}
-
-.codrops-icon-drop:before {
-	content: "\e001";
-}
-
-.codrops-icon-prev:before {
-	content: "\e004";
-}
-
 /* Related demos */
-.related {
-	text-align: center;
-}
 
 .related > a {
 	width: calc(100% - 20px);
 	max-width: 340px;
-	border: 1px solid black;
-	border-color: initial;
+	border: 1px solid initial;
 	display: inline-block;
 	text-align: center;
 	margin: 20px 10px;
@@ -179,9 +144,7 @@ p {
 	.container > section {
 		padding: 3em 0;
 	}
-	.codrops-header {
-		padding: 2em 0 1em;
-	}
+
 	.codrops-header h1 {
 		font-size: 3.5em;
 	}
@@ -189,9 +152,6 @@ p {
 
 
 @media screen and (max-width: 25em) {
-	.codrops-icon {
-		font-size: 1.5em;
-	}
 	.codrops-icon span {
 		display: none;
 	}
