--- a/stylesheets/tabstyles.css
+++ b/stylesheets/tabstyles.css
@@ -57,10 +57,6 @@
 	font-size: 0.7em;	
 }
 
-.tabs-style-iconbox nav ul li.tab-current {
-	z-index: 100;
-}
-
 .tabs-style-iconbox nav ul li.tab-current a {
 	background: #fff;
 	box-shadow: -1px 0 0 #fff;
@@ -73,8 +69,7 @@
 	margin-left: -10px;
 	width: 0;
 	height: 0;
-	border: solid transparent;
-	border-width: 10px;
+	border: 10px solid transparent;
 	border-top-color: #fff;
 	content: '';
 	pointer-events: none;
@@ -95,11 +90,6 @@
 .tabs-style-iconbox nav ul li:first-child::before {
 	right: auto;
 	left: 0;
-}
-
-.tabs-style-iconbox .icon::before {
-	display: block;
-	margin: 0 0 0.25em 0;
 }
 
 /*****************************/
@@ -197,21 +187,12 @@
 /* Top Line */
 /*****************************/
 
-.tabs-style-topline {
-	max-width: 1200px;
-}
-
 .tabs-style-topline nav li {
 	border: 1px solid rgba(40,44,42,0.1);
 }
 
 .tabs-style-topline nav li:not(:last-child) {
 	border-right: none;
-}
-
-.tabs-style-topline nav li.tab-current {
-	border-top-color: #2CC185;
-	border-bottom: none;
 }
 
 .tabs-style-topline nav a {
@@ -234,11 +215,6 @@
 	color: #2CC185;
 }
 
-.tabs-style-topline .icon::before {
-	display: block;
-	margin: 0;
-}
-
 .tabs-style-topline nav a span {
 	text-transform: uppercase;
 	letter-spacing: 1px;
@@ -249,10 +225,6 @@
 /*****************************/
 /* Falling Icon, from http://vintageproductions.eu/grid/interactivity/ */ 
 /*****************************/
-
-.tabs-style-iconfall {
-	overflow: visible;
-}
 
 .tabs-style-iconfall nav a {
 	display: inline-block;
@@ -290,35 +262,7 @@
 	transform: scale3d(0,1,1);
 }
 
-.tabs-style-iconfall nav li.tab-current::before {
-	opacity: 1;
-	-webkit-transform: scale3d(1,1,1);
-	transform: scale3d(1,1,1);
-}
-
-.tabs-style-iconfall .icon::before {
-	display: block;
-	margin: 0 0 0.35em;
-	opacity: 0;
-	-webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
-	transition: transform 0.2s, opacity 0.2s;
-	-webkit-transform: translate3d(0,-100px,0);
-	transform: translate3d(0,-100px,0);
-	pointer-events: none;
-}
-
-.tabs-style-iconfall nav li.tab-current .icon::before {
-	opacity: 1;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-}
-
 @media screen and (max-width: 58em) {
-	.tabs-style-iconfall nav li .icon::before {
-		opacity: 1;
-		-webkit-transform: translate3d(0,0,0);
-		transform: translate3d(0,0,0);
-	}
 }
 
 /*****************************/
@@ -430,10 +374,6 @@
 /* Circle */
 /*****************************/
 
-.tabs-style-circle {
-	overflow: visible;
-}
-
 .tabs-style-circle nav li::before {
 	position: absolute;
 	top: 50%;
@@ -459,12 +399,6 @@
 	}
 }
 
-.tabs-style-circle nav li.tab-current::before {
-	opacity: 1;
-	-webkit-transform: scale3d(1,1,1);
-	transform: scale3d(1,1,1);
-}
-
 .tabs-style-circle nav a {
 	overflow: visible;
 	color: #74777b;
@@ -477,12 +411,6 @@
 
 .tabs-style-circle nav a span {
 	display: inline-block;
-}
-
-.tabs-style-circle nav a span,
-.tabs-style-circle .icon::before {
-	-webkit-transition: -webkit-transform 0.3s cubic-bezier(0.7,0,0.3,1);
-	transition: transform 0.3s cubic-bezier(0.7,0,0.3,1);
 }
 
 .tabs-style-circle nav a:hover,
@@ -499,17 +427,6 @@
 	transform: translate3d(0,4px,0);
 }
 
-.tabs-style-circle .icon::before {
-	display: block;
-	margin: 0;
-	pointer-events: none;
-}
-
-.tabs-style-circle nav li.tab-current .icon::before {
-	-webkit-transform: translate3d(0,-4px,0);
-	transform: translate3d(0,-4px,0);
-}
-
 /*****************************/
 /* Shape */
 /*****************************/
@@ -524,10 +441,6 @@
 
 .tabs-style-shape nav ul li:first-child {
 	margin-left: 0;
-}
-
-.tabs-style-shape nav ul li.tab-current {
-	z-index: 100;
 }
 
 .tabs-style-shape nav li a {
@@ -635,9 +548,6 @@
 	.tabs-style-shape nav ul li:last-child a span {
 		padding: 1.25em 0 !important;
 	}
-	.tabs-style-shape nav ul li.tab-current {
-		z-index: 1;
-	}
 }
 
 /*****************************/
@@ -711,10 +621,6 @@
 /* Flip */
 /*****************************/
 
-.tabs-style-flip {
-	max-width: 1200px;
-}
-
 .tabs-style-flip nav a {
 	padding: 0.5em 0;
 	color: #2CC185;
@@ -783,10 +689,6 @@
 	border: none;
 }
 
-.tabs-style-fillup nav ul li.tab-current {
-	z-index: 100;
-}
-
 .tabs-style-fillup nav ul li.tab-current a {
 	color: #fff;
 }
@@ -813,14 +715,6 @@
 	transform: translate3d(0,0,0);
 }
 
-.tabs-style-fillup nav ul li a span,
-.tabs-style-fillup .icon::before {
-	-webkit-transition: -webkit-transform 0.5s;
-	transition: transform 0.5s;
-	-webkit-transform: translate3d(0,5px,0);
-	transform: translate3d(0,5px,0);
-}
-
 .tabs-style-fillup nav ul li a span {
 	display: block;
 	font-weight: 700;
@@ -828,25 +722,9 @@
 	line-height: 1.5;
 }
 
-.tabs-style-fillup .icon::before {
-	display: block;
-	margin: 0;
-}
-
-.tabs-style-fillup nav ul li.tab-current a span,
-.tabs-style-fillup li.tab-current .icon::before {
-	-webkit-transform: translate3d(0,-10px,0);
-	transform: translate3d(0,-10px,0);
-}
-
-
 /*****************************/
 /* Trapezoid, based on http://lea.verou.me/2013/10/slanted-tabs-with-css-3d-transforms/ */
-/*****************************/ 
-
-.tabs-style-tzoid {
-	max-width: 1200px;
-}
+/*****************************/
 
 .tabs-style-tzoid nav {
 	padding: 0 1em;
@@ -915,11 +793,6 @@
 /* Circle fill */
 /*****************************/
 
-.tabs-style-circlefill {
-	max-width: 700px;
-	border: 1px solid #2CC185;
-}
-
 .tabs-style-circlefill nav ul li {
 	overflow: hidden;
 	border-right: 1px solid #2CC185;
@@ -954,11 +827,6 @@
 	transition: transform 0.3s;
 }
 
-.tabs-style-circlefill nav li.tab-current::before {
-	-webkit-transform: scale3d(2.5,2.5,1);
-	transform: scale3d(2.5,2.5,1);
-}
-
 .tabs-style-circlefill nav a {
 	-webkit-transition: color 0.3s; 
 	transition: color 0.3s;
@@ -970,12 +838,6 @@
 
 .tabs-style-circlefill nav li.tab-current a {
 	color: #fff;
-}
-
-.tabs-style-circlefill .icon::before {
-	display: block;
-	margin: 0;
-	pointer-events: none;
 }
 
 .tabs-style-circlefill .content-wrap {
