--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,11 +2,11 @@ body {
 	font-family: arial;
 	font-size: 14px;
 	color: #1D2130;
-	background-image: linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
-	background-image: -o-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
-	background-image: -moz-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
-	background-image: -webkit-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
-	background-image: -ms-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 60%);
+	background-image: linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 100%);
+	background-image: -o-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 100%);
+	background-image: -moz-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 100%);
+	background-image: -webkit-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 100%);
+	background-image: -ms-linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 100%);
 
 	background-image: -webkit-gradient(
 	linear,
@@ -162,4 +162,7 @@ opacity: 1;
 	margin-top: 10px;
 }
 
-.content-current{display: block !important;}
+.content-current 
+{
+    display: block !important;
+}
