--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,500,700);
 
 body {
-	font-family: arial;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	color: #1D2130;
 	background-image: linear-gradient(top, rgb(200,225,245) 15%, rgb(240,240,240) 100%);
@@ -46,9 +46,9 @@ header h2 {
 	font-size: 16px;
 	top: 85px;
 	margin-left: -200px;
-	font-weight: thin;
+	font-weight: normal;
 	position: absolute;
-	font-family: Impact, Times, arial;
+	font-family: Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 	margin-top: 15px;
 }
@@ -128,7 +128,7 @@ opacity: 1;
 	display: none;
 	width: 720px;
 	text-align: center;
-	float: center;
+	float: left;
 	position: relative;
 	margin-left: 0;
 }
@@ -145,7 +145,7 @@ opacity: 1;
 	margin: 25px;
 	width: 60%;
 	height: 40px;
-	border-radius: 5px solid gray;
+	border-radius: 5px;
 	display: inline-block;
 	left: 0;
 	color: black;
@@ -249,7 +249,7 @@ header h2 {
 
 code, pre {
 	margin-bottom: 30px;
-	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal;
+	font-family: "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace Terminal;
 	font-size: 12px;
 	color: #222;
 }
@@ -1159,7 +1159,7 @@ footer {
 	margin-top: 40px;
 	font-size: 13px;
 	color: #aaa;
-	background: transparent url('../images/hr.png') 0 0 no-repeat;
+	background: transparent url('../images/header-bg.jpg') 0 0 no-repeat;
 }
 
 footer a {
