--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -29,7 +29,8 @@ body {
 
 header {
 	width: 950px;
-	height: 60px;
+	height: auto;
+	margin: 0 auto;
 }
 
 header img{
@@ -42,13 +43,11 @@ header img{
 header h2 {
 	text-align: left;
 	font-size: 16px;
-	top: 85px;
-	margin-left: -200px;
-	font-weight: thin;
-	position: absolute;
+	top: 38px;
 	font-family: Impact, Times, arial;
 	text-transform: uppercase;
 	margin-top: 15px;
+	position: relative;
 }
 
 h1 {
