--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -583,7 +583,7 @@ form {
   padding-right: 0.3em;
   margin-left: -0.9em;
   color: #9ddcff;
-  content: "/";
+  content: "";
 }
 
 #main-content h2 {
@@ -597,7 +597,7 @@ form {
 #main-content h2:before {
   padding-right: 0.3em;
   margin-left: -1.5em;
-  content: "//";
+  content: "";
   color: #9ddcff;
 }
 
@@ -614,7 +614,7 @@ form {
 #main-content h3:before {
   padding-right: 0.3em;
   margin-left: -2em;
-  content: "///";
+  content: "";
   color: #9ddcff;
 }
 
@@ -630,7 +630,7 @@ form {
 h4:before {
   padding-right: 0.3em;
   margin-left: -2.8em;
-  content: "////";
+  content: "";
   color: #9ddcff;
 }
 
@@ -644,7 +644,7 @@ h4:before {
 h5:before {
   padding-right: 0.3em;
   margin-left: -3.2em;
-  content: "/////";
+  content: "";
   color: #9ddcff;
 }
 
@@ -658,7 +658,7 @@ h5:before {
 h6:before {
   padding-right: 0.3em;
   margin-left: -3.7em;
-  content: "//////";
+  content: "";
   color: #9ddcff;
 }
 
